--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -1,14 +1,18 @@
 @font-face {
-	font-family: News Cycle;
+	font-family: 'News Cycle';
 	src: url('../fonts/mod3_news_cycle.ttf') format('truetype');
 }
 
 @font-face {
-	font-family: Contail;
+	font-family: 'Contrail One';
 	src: url('../fonts/mod3_contrail_one.ttf') format('truetype');
 }
 
-@media print {
+@media not print {
+	body {
+		color: #635959;
+	}
+
 	header {
 		background-color: #242323;
 		color: #efefef;
@@ -21,47 +25,52 @@
 	article a {
 		color: #314052;
 	}
+}
 
-	body {
-		color: #635959;
+header h1 {
+	font-size: 4em;
+}
+
+main figure>figcaption {
+	font-size: 0.75em;
+	font-syle: italic;
+}
+
+main figure>figcaption {
+	content: 'Picture above: ';
+	font-weight: bold;
+}
+
+article>time {
+	float: right;
+	font-size: 0.75em;
+	font-weight: lighter;
+}
+
+@media not print {
+	main>h3 {
+		font-size: 2em;
 	}
 }
 
-body {
-	font-family: 'News Cycle';
+header {
+	padding: 20px 50px;
 }
 
 main {
 	padding: 5px 10px;
 }
 
-header h1 {
-	font-size: 0.75em;
-	font-style: italic;
-
-}
-main figure > figcaption ::before {
-	content: 'Pictured above: ';
-	font-weight: bold;
+body {
+	font-family: 'News Cycle';
 }
 
-article > time {
-	float: right;
-	font-size: 0.75em;
-	font-weight: lighter;
-}
-
-main > h3 {
-	font-size: 2em;
+header {
+	font-family: 'Contrail One';
 }
 
 article {
 	margin: 5px 0px;
 	padding: 5px 5px;
 	box-shadow: -1px -1px 6px #888888;
-}
-
-header {
-	padding 20px 50px;
-	font-family: 'Contail One';
 }
